profilelist1exp/unpackaged/objects/Support_Request_Submission_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Services Finance Support</fullName>
                </value>
                <value>
                    <fullName>Service Proposal Support</fullName>
                </value>
                <value>
                    <fullName>Deal Governance Review Support</fullName>
                </value>
                <value>
                    <fullName>Services Legal Support</fullName>
                </value>
                <value>
                    <fullName>Solution Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan - 1%</fullName>
                </value>
                <value>
                    <fullName>Discover - 10%</fullName>
                </value>
                <value>
                    <fullName>Qualify - 30%</fullName>
                </value>
                <value>
                    <fullName>Propose - 60%</fullName>
                </value>
                <value>
                    <fullName>Commit - 90%</fullName>
                </value>
                <value>
                    <fullName>Win - 100%</fullName>
                </value>
                <value>
                    <fullName>Lost, Cancelled - 0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unweighted_Rev_Services_Only__c</fullName>
        <label>Unweighted Rev – Services Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Support Request Submission Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resource_Type__c</columns>
        <columns>Condition__c</columns>
        <columns>Stage__c</columns>
        <columns>Unweighted_Rev_Services_Only__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Support Request Submission Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Request Submission Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>